# PrecisionLend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  docker-compose.yaml  pyproject.toml  run.py  utilities.py
docker/: Dockerfile.mlflow  run-server.sh
pipelines/: __init__.py  credit_score.py  credit_score_inference.py  credit_score_training.py  evidently.py
services/: credit_score.py  serve_config.yaml
src/: config.py  mlflow_utils.py  training.py  utilities.py
src/data_eng/: extraction.py  transformations.py  validations.py
src/feature_eng/: pipelines.py  utilities.py
steps/: credit_score.py  evidently.py
