[project]
name = "precisionlend"
version = "0.1.0"
description = "Machine Learning-Powered Loan Processing and Credit Scoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bentoml>=1.3.12",
    "click>=8.1.3",
    "mlflow>=2.17.2",
    "pandas>=2.2.3",
    "poethepoet>=0.30.0",
    "polars>=1.13.1",
    "pre-commit>=4.0.1",
    "scikit-learn>=1.5.2",
    "zenml[server]==0.68.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.13.0",
    "ruff>=0.7.4",
]
