[project]
name = "precisionlend"
version = "0.1.0"
description = "Machine Learning-Powered Loan Processing and Credit Scoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bentoml>=1.3.12",
  "click>=8.1.3",
  "evidently>=0.4.30",
  "hydra-core==1.3.2",
  "mlflow>=2.17.2",
  "numpy==1.26.4",
  "pandas>=2.2.3",
  "pandera[polars]>=0.21.0",
  "pip>=24.3.1",
  "poethepoet>=0.30.0",
  "polars==1.15",
  "pre-commit>=4.0.1",
  "ray[serve]>=2.39.0",
  "rich>=13.9.4",
  "scikit-learn>=1.5.2",
  "typeguard>=4.4.1",
  "zenml[server]==0.68.1",
]

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "mypy>=1.13.0",
  "nb-black-formatter>=1.0.1",
  "ruff>=0.7.4",
]


# ----------------------------------
# --- Poe the Poet Configuration ---
# ----------------------------------
[tool.poe]
# Load Environment Variables
envfile = ".env"

[tool.poe.tasks.start-mlflow]
help = "Start MLflow Server"
shell = """
mlflow server \
  --backend-store-uri ${MLFLOW_BACKEND_STORE_URI} \
  --host ${MLFLOW_HOST} \
  --port ${MLFLOW_PORT}
"""

[tool.poe.tasks.stop-mlflow]
help = "Stop MLflow Server"
shell = """
pkill -f 'mlflow server'
"""

[tool.poe.tasks.delete-mlflow-experiment]
help = "Delete MLflow experiment"
shell = "mlflow experiments delete --experiment-id YOUR_EXPERIMENT_ID"

[tool.poe.tasks.start-zenml]
help = "Start ZenML Server"
shell = "export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES && zenml up"

[tool.poe.tasks.stop-zenml]
help = "Stop ZenML Server"
shell = "zenml down"

[tool.poe.tasks]
# Pipeline Commands
run-credit-score-training = "python run.py --no-cache --run-credit-score-training"
run-credit-score-training-with-settings = """
                        python run.py --no-cache --run-credit-score-training
                          --run-export-settings
                          """
run-data-report = "python run.py --no-cache --run-data-report"
run-data-report-with-settings = """
                        python run.py --no-cache --run-data-report
                          --run-export-settings
                          """
